[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-log-md"
dynamic = ["version"]
description = 'Command-line utility uses git log to create a Markdown document listing the message, hash, and timestamp for each commit.'
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [ "git", "git log", "documentation tool", "markdown" ]
authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
dependencies = []

[project.scripts]
glmd = "git_log_md:main"
git_log_md = "git_log_md:main"

[tool.setuptools.dynamic]
version = {attr = "git_log_md.__version__"}

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
ignore = ["ISC001"]  # single-line-implicit-string-concatenation

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "ruff>=0.11.8",
]
# extend-select = ["ALL"]
